--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://slintel.com
 google_analytics_key:
 permalink: pretty
 host:
-baseurl: developer.slintel.com
+baseurl: 
 
 # -----
 # Build
