--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@
 
 title: Slintel
 description: Slintel API documentation.
-url: https://slintel.com
+url: https://slintel.github.io
 google_analytics_key:
 permalink: pretty
-host: https://slintel.github.io
 baseurl: _site/
 
 # -----
